k8s/nodejs-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: default
spec:
  replicas: ${NODEJS_HPA_MIN}
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
      - name: nodejs-app
        image: "${NODEJS_IMAGE}"
        ports:
        - containerPort: 3000
        imagePullPolicy: Always 
        readinessProbe:
          httpGet:
            path: /nodejs/
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /nodejs/
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  selector:
    app: nodejs-app
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
