k8s/arcade-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retro-arcade-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retro-arcade-service
                port:
                  number: 3000
